feat(auth): add login endpoint and rename jwt scope to roles